[gd_scene load_steps=25 format=4 uid="uid://da3smxqbl4qug"]

[ext_resource type="Script" uid="uid://nra4nd4xi1cj" path="res://scripts/player/weapons/player_shotgun_arrow_logic.gd" id="1_ei326"]
[ext_resource type="AudioStream" uid="uid://3arf0t2aauc8" path="res://assets/sounds/Battle/BowAndArrow/ArrowImpact/ArrowImpact_1.wav" id="2_psjdr"]
[ext_resource type="AudioStream" uid="uid://babjv8wn73q0m" path="res://assets/sounds/Battle/BowAndArrow/ArrowImpact/ArrowImpact_2.wav" id="3_avg0l"]
[ext_resource type="AudioStream" uid="uid://bci5lgb6618rf" path="res://assets/sounds/Battle/BowAndArrow/ArrowImpact/ArrowImpact_3.wav" id="4_5k3op"]
[ext_resource type="Shader" uid="uid://vergnuequv4r" path="res://addons/GPUTrail-main/shaders/trail.gdshader" id="5_6co2i"]
[ext_resource type="Shader" uid="uid://vbvxn62n5kck" path="res://addons/GPUTrail-main/shaders/trail_draw_pass.gdshader" id="6_urlbc"]
[ext_resource type="Texture2D" uid="uid://crk6pkb7e5rwc" path="res://addons/GPUTrail-main/defaults/texture.tres" id="7_7p356"]
[ext_resource type="Script" uid="uid://dctlv3toi4hgk" path="res://addons/GPUTrail-main/GPUTrail3D.gd" id="8_shs3p"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3ov58"]
resource_name = "Material"
cull_mode = 2
albedo_color = Color(0.576469, 0.47451, 0.368628, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_v2cci"]
resource_name = "Material.001"
cull_mode = 2
albedo_color = Color(0.61673, 0.61673, 0.61673, 1)
metallic = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_neof0"]
resource_name = "Material.002"
cull_mode = 2
albedo_color = Color(0.232046, 0.232046, 0.232046, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hjuwa"]
resource_name = "Material.003"
cull_mode = 2
albedo_color = Color(0.610098, 0.040027, 0.0593485, 1)

[sub_resource type="ArrayMesh" id="ArrayMesh_xvmid"]
_surfaces = [{
"aabb": AABB(-1.17639, -0.018808, -0.0188079, 2.48712, 0.037616, 0.0376158),
"format": 34359742465,
"index_count": 180,
"index_data": PackedByteArray("EwAUAAAAFAACAAAAAAACABUAFAAVAAIABQATAAAABQAAABUAEwABABQAFgAVABQAAQAWABQAFgALABUACQAFABUACQAVAAsAFwALABYAGAAFAAkAGQATAAUAGAAZAAUAGQAaABMAGgABABMABgAZABgABgADABkAAwAaABkACgAGABgAAwAEABoACgAYABsAGwAYAAkADQAKABsABAAHABoAGgAHAAEABAAIAAcAGwAJAAwADAAJAAsADQAbABwAHAAbAAwADwANABwADAALAB0ADwAcAB4AHAAMAB8AHwAMAB0AHgAcAB8AEQAPAB4AFwAdAAsACAARACAAEQAeACAACAAgAAcAHgAfABAAIAAeABAAHwAdAA4AEAAfAA4AHQAhAA4AFwAhAB0ADgAhABcAEAAOABcAIAAQABIAEgAQABcABwAgABIAEgAXABYAAQASABYABwASAAEABwABAAEABwAHAAEA"),
"lods": [0.028729, PackedByteArray("AAABAAIAAwAEAAAAAwAAAAUABgADAAUABAAHAAAABAAIAAcAAAAHAAEABgAFAAkACgAGAAkABQAAAAsACQAFAAsAAAACAAsACgAJAAwADAAJAAsADQAKAAwADgAMAAsADQAMAA4ACwACAA4ADwANAA4ADwAOABAAEAAOAAIAEQAPABAAEgAQAAIAEQAQABIACAARABIAAQASAAIACAASAAcABwASAAEABwABAAEABwAHAAEA")],
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 34,
"vertex_data": PackedByteArray("qyKlP64rdLMSE5q8LByhPyjlWbzt5Fm858WnP64rdLMSE5q8ei+WvyjlWTzt5Fm8R7+Vv64rdDMSE5q8LByhP7LkWTzt5Fm8AJSWvzATmjwAAACAtAmEPx3lWbzt5Fm8ei+Wv7HkWbzt5Fm85BqhP/USmjwAAACAei+WvyjlWTzt5Fk8qyKlP/QSmjwAAACALByhP7LkWTzt5Fk8R7+Vv64rdDMSE5o8qyKlP64rdLMSE5o8ei+Wv7HkWbzt5Fk8LByhPyjlWbzt5Fk8AJSWv/QSmrwAAACA5BqhPy8TmrwAAACAmx2hP77vbbMSE5q858WnPyrlWbzt5Fm858WnP7DkWTzt5Fm8qyKlPzATmrwAAACA58WnPyrlWbzt5Fk8KP+DP/oSmjwAAACAtAmEP73kWTzt5Fm8fBWEP4HpQLMSE5q8tAmEP73kWTzt5Fk8fBWEP4HpQLMSE5o858WnP7DkWTzt5Fk8tAmEPx3lWbzt5Fk8mx2hP77vbbMSE5o8KP+DPyoTmrwAAACA58WnP64rdLMSE5o8")
}, {
"aabb": AABB(-1.33384, -0.0273896, -0.0472911, 0.173239, 0.0547793, 0.0945823),
"format": 34359742465,
"index_count": 456,
"index_data": PackedByteArray("JQAWACYAJgAWACcAJQAoABYAFQAlACYAKAApABYAKgAoACUAFgApACsAFgArACcAKAAsACkAGAAlABUAGAAqACUAKgAtACgALQAsACgALgAqABgABQAtACoALgAFACoABQAvAC0ALQAwACwALwAwAC0AMAAxACwAMgAvAAUAGwAFAC4AGwAyAAUAGgAbAC4AMgAdAC8ALwAzADAAHQAzAC8AMwA0ADAAMAA0ADEAHQA1ADMAMwA2ADQANQA2ADMANAA3ADEANgAEADQANAAEADcANgA4AAQANQA5ADYAOQA4ADYAIAA1AB0AOgA5ADUAIAA6ADUAOwAgAB0AOwAdADIAPAA6ACAAPQAgADsAPQA8ACAAHAA7ADIAHAAyABsADwA9ADsADwA7ABwAIQA8AD0AIgA9AA8AIgAhAD0AIQAnADwAJgAnACEAJwA+ADwAPAA+ADoAJwArAD4AFwAmACEAFwAhACIAFQAmABcAPgA/ADoAOgA/ADkAKwBAAD4APgBAAD8AKwAfAEAAKQAfACsAPwBBADkAOQBBADgAQABCAD8APwBCAEEAHwBDAEAAQABDAEIAKQBEAB8ALABEACkALAAxAEQARABFAB8AHwBFAEMAMQBGAEQARABGAEUAMQA3AEYARQAUAEMARgBHAEUARQBHABQANwABAEYARgABAEcANwBIAAEABABIADcAQwAUAEkAQwBJAEIABABKAEgAOABKAAQASAAMAAEAOABLAEoAQQBLADgASgALAEgASAALAAwASwAKAEoASgAKAAsAQQBMAEsAQgBMAEEAQgBJAEwATAAeAEsASwAeAAoACgANAAsAHgANAAoACwANAAwATAAOAB4ASQAOAEwADgANAB4ASQASAA4AEgANAA4AFAASAEkADAANAAMAAQAMAAMAAQADAEcAAwANABMAEwANABIARwADABMAFAATABIARwATABQABwBNAAYABgBNAE4ABgBOAAAABwAZAE0ACAAZAAcATQAVAE4ATQAYABUAGQAYAE0ATgAVABcAGQAuABgAGgAuABkACAAaABkACQAaAAgATgAXACQAAABOACQAJAAXACIAAAAkAAIACQBPABoATwAbABoAEABPAAkATwAcABsAAgAkACMAJAAiACMAAgAjABEAIwAiAA8AUAAcAE8AEABQAE8AUAAPABwAEQBQABAAIwAPAFAAEQAjAFAA"),
"lods": [0.007916, PackedByteArray("FQAWABcAFQABABYAAAAVABcABgAVAAAABgAYABUAGAABABUAGQAYAAYABwAZAAYACAAZAAcACAAaABkACQAaAAgAGgAbABkACQAbABoAGQAFABgAGwAFABkACQAcABsABQAEABgAEAAcAAkAGAAEAAEAGwAdAAUAHAAdABsABQAeAAQAHQAeAAUAHgAKAAQABAAKAAsABAALAAEAHgANAAoACgANAAsACwAMAAEACwANAAwAAQAMAAMADAANAAMAAQADAB8AFgABAB8AAwANABMAFwAWAB8AAwATABQAHwADABQAEwANABIAFAATABIAEgANAA4ADgANAB4AFAASAA4AHQAOAB4AIAAOAB0AFAAOACAAHAAgAB0ADwAgABwADwAUACAAEAAPABwAIQAfABQAIQAUAA8AFwAfACEAIgAhAA8AFwAhACIAIwAPABAAIwAiAA8AEQAjABAAAgAjABEAJAAiACMAAgAkACMAJAAXACIAAAAkAAIAAAAXACQA"), 0.021988, PackedByteArray("AAABAAIAAgABAAMAAAAEAAEABQAEAAAABQAAAAYABwAFAAYACAAFAAcACAAJAAUABQAKAAQABAALAAEABAAKAAsACwAMAAEAAQAMAAMACgANAAsACwANAAwABQANAAoADAANAAMACQAOAAUADgANAAUADwAOAAkAEAAPAAkAEQAPABAAAgAPABEAAgADAA8AEgANAA4AAwANABMAEwANABIAAwAUAA8AAwATABQADwAUAA4AFAATABIAFAASAA4A")],
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 81,
"vertex_data": PackedByteArray("AJSWv/QSmrwAAACApMunv49U1Lv0zzc8ei+Wv7HkWbzt5Fk8JaOov8SniDM8yEg8g2imvx3wBrzkoGm8+zOWvzQtfTNg5D29ei+Wv7HkWbzt5Fm8R7+Vv64rdDMSE5q8ei+WvyjlWTzt5Fm8AJSWvzATmjwAAACAUqWovylWo7s5Zg283amov0wH5bsAAACAUqWovylWo7s5Zg08HLuqv1wGiTMAAACAUqWovzlXozs5Zg28AOqVvyEZnzxUnwg9ei+WvyjlWTzt5Fk8R7+Vv64rdDMSE5o83amov1sI5TsAAACAUqWovzlXozs6Zg08pMunv51V1Dvzzzc8LgKXvydg4LwAAACA7Y+gv4ZSWryk/7w8AOqVv+YYn7xVnwg9AOqVv+YYn7xVnwi9bI6Uv1+zejOQcT29jX2Vv0HGnTyhzgS9AOqVvyEZnzxUnwi9LgKXv2Rg4DwAAACA7Y+gvwhTWjyk/7y8JaOov8SniDM9yEi8gKGkv7KzhjPIH8o8sn+gv2TcmjwAAACA+zOWvzQtfTNg5D09sv6Uv6i1ezNYtEE9bI6Uv1+zejOQcT09jX2VvwXGnbyhzgQ9LgyYv9kr27wAAACAKAqXv7wQm7zbPAY9vpegvxY2hDPlcAU9sn+gvyXcmrwAAACAApuivwnnQbzX26c8KAqXv7wQm7zbPAa9TqCivyeBhTNGIe08A5Civ1hribwAAACA7Y+gv4ZSWryk/7y8sv6Uv6i1ezNYtEG9vpegvxY2hDPlcAW9ApuivwnnQbzX26e835ikv+PLabwAAACAKAqXv/kQmzzbPAa9TqCivzqBhTNGIe28sp6kv5ErJbxY/I68Apuiv43nQTzX26e8gKGkv7KzhjPIH8q8SGemv1qcPrwAAACAHGmmv3CvhzODSqW8sp6kvxUsJTxY/I68A5Civ5lriTwSE5opLgyYvxYs2zwAAACA7Y+gvwhTWjyk/7w8KAqXv/kQmzzbPAY9Apuiv4vnQTzX26c835ikv2XMaTwAAACAsp6kvxUsJTxY/I48g2imv6PwBjzkoGm8SGemv96cPjwAAACAg2imv6PwBjzjoGk8sp6kv5ErJbxY/I48HGmmv3CvhzODSqU8g2imvx3wBrzkoGk8hsqnv69biDN7PII8+82nv0iCFbwAAACA+82nv8+CFTwSE5oppMunv49U1Lv0zze8hsqnv7lbiDN7PIK8pMunv51V1Dv0zze8jX2VvwXGnbyhzgS9AJSWv0wg3bwAAACAAJSWv4kg3TwAAACAjX2Vv0HGnTyhzgQ9")
}, {
"aabb": AABB(1.03122, -0.039194, -0.00153103, 0.259475, 0.089067, 0.0554204),
"format": 34359742465,
"index_count": 48,
"index_data": PackedByteArray("BgAHAAgACAAHAAkACgAHAAYACgAGAAgACgAJAAcACAAJAAsACwAJAAoACgAIAAsAAAABAAIAAgABAAMABAABAAAABAADAAEABQAAAAIABQAEAAAAAgADAAUABQADAAQA"),
"lods": [0.0556672, PackedByteArray("AAABAAIAAgABAAMABAABAAAABAADAAEABQAAAAIABQAEAAAAAgADAAUABQADAAQA")],
"name": "Material.002",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 12,
"vertex_data": PackedByteArray("USCOP+KJIL3Qw1k9USCOP4TnF70Su1w9tAmEPx3lWbzt5Fk8pjWlP4rnF70Su1w9pjWlP+iJIL3Qw1k9LByhPyjlWbzt5Fk8nAWOP6dHTD3wva46nAWOP+DOSz3QrMi6KP+DP/oSmjwAAACAaDKlP9rOSz3QrMi6aDKlP6FHTD3wva465BqhP/USmjwAAACA")
}, {
"aabb": AABB(1.03155, -0.0398037, -0.0549547, 0.259154, 0.0265045, 0.0416555),
"format": 34359742465,
"index_count": 30,
"index_data": PackedByteArray("AAABAAIAAAAAAAEAAgABAAMAAAACAAQAAgADAAQABQABAAAABQADAAEAAAAEAAUABAADAAUABAAFAAUA"),
"name": "Material.003",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 6,
"vertex_data": PackedByteArray("LByhPyjlWbzt5Fm8pjWlP/VBF70lGGG9pjWlPzYJI70nPly9USCOP+5BF70lGGG9USCOPzAJI70nPly9tAmEPx3lWbzt5Fm8")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_rhtcn"]
resource_name = "pfeil_Cylinder_004"
_surfaces = [{
"aabb": AABB(-1.17639, -0.018808, -0.0188079, 2.48712, 0.037616, 0.0376158),
"attribute_data": PackedByteArray("AACAPwAAAAAAAGA/ACjROwAAgD8AAAAAAABgP5D3Vj0AAIA/AAAAPwAAYD8AAAA/AABgPwAo0TsAAGA/kPdWPQAAQD8AKNE7AABAPwAAAD8AACA/ACjROwAAID8AAAA/AAAAPwAAAAAAAAA/AAAAPwAAgD4AAAAAAADAPgAo0TsAAMA+AAAAPwAAgD4AKNE7AACAPgAAAD8AAAA+ACjROwAAAD4AAAA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/AACAPwAo0TsAAGA/AAAAAAAAQD8AAAAAAACAP6D3Vj0AACA/AAAAAP//Pz+w91Y9AQAgP5D3Vj0AAAA/AAAAAAAAwD4AAAAAAAAAPwAo0Tv///8+sPdWPQAAwD6g91Y9AAAAPgAAAAD//38+sPdWPQAAAAAAKNE7AAAAPqD3Vj0AAAAAoPdWPUjh+j4AAEA/YnGkPSyOFD+o49Y+LI4UPwAAgD5cjwI/ENcjPAAAQD+o49Y+1HFrP2JxpD3UcWs/AACAPqRwfT8="),
"format": 34359742487,
"index_count": 180,
"index_data": PackedByteArray("GAAZAAAAGQACAAAAGAABABkAAQAaABkAGwABABgAAQAIABoACAAcABoAGwADAAEAAwAIAAEABAADABsAAwAGAAEAAwAHAAYABAAFAAMABQAdAAMAAwAdAAgABQAJAB0ACAAKABwAHQAKAAgACQAeAB0AHQAeAAoACQALAB4ACgAMABwADAAfABwAIAAfAAwACgAhAAwAIQAgAAwAHgAhAAoACwAiAB4AHgAiACEACwANACIAIQAPACAAIgAPACEADwAOACAADQAjACIAIgAjAA8ADQAQACMADwARAA4AIwARAA8AEQAkAA4AEAAlACMAIwAlABEAEAASACUAEQATACQAJQATABEAEwAVACQAFQAWACQAEwAmABUAJQAnABMAJwAmABMAEgAnACUAJwAoACYAEgAUACcAFAAoACcAFAAXACgAKQAqACsAKwAqACwAKQAtACoALgAtACkALgAvAC0ALgAwAC8A"),
"lods": [0.028729, PackedByteArray("AAABAAIAAAADAAEABAADAAAABAAFAAMAAwAGAAEAAwAHAAYAAwAIAAEABQAIAAMAAQAIAAIABQAJAAgACQAKAAgACAAKAAIACQALAAoACgAMAAIACwAMAAoACwANAAwADgACAAwADQAPAAwADAAPAA4ADQAQAA8AEAARAA8ADwARAA4AEAASABEAEgATABEAEQATAA4AEgAUABMAEwAVAA4AFAAVABMAFQAWAA4AFAAXABUA")],
"material": SubResource("StandardMaterial3D_3ov58"),
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 49,
"vertex_data": PackedByteArray("qyKlP64rdLMSE5q8LByhPyjlWbzt5Fm858WnP64rdLMSE5q8tAmEPx3lWbzt5Fm8R7+Vv64rdDMSE5q8ei+Wv7HkWbzt5Fm8LByhPyjlWbzt5Fm8tAmEPx3lWbzt5Fm85BqhPy8TmrwAAACAAJSWv/QSmrwAAACALByhPyjlWbzt5Fk8ei+Wv7HkWbzt5Fk8qyKlP64rdLMSE5o8R7+Vv64rdDMSE5o8qyKlP/QSmjwAAACALByhP7LkWTzt5Fk8ei+WvyjlWTzt5Fk85BqhP/USmjwAAACAAJSWvzATmjwAAACALByhP7LkWTzt5Fm8ei+WvyjlWTzt5Fm8qyKlP64rdLMSE5q858WnP64rdLMSE5q8R7+Vv64rdDMSE5q8mx2hP77vbbMSE5q858WnPyrlWbzt5Fm8qyKlPzATmrwAAACAfBWEP4HpQLMSE5q858WnPyrlWbzt5Fk8KP+DPyoTmrwAAACAtAmEPx3lWbzt5Fk858WnP64rdLMSE5o858WnP7DkWTzt5Fk8mx2hP77vbbMSE5o8fBWEP4HpQLMSE5o8tAmEP73kWTzt5Fk858WnP7DkWTzt5Fm8KP+DP/oSmjwAAACAmx2hP77vbbMSE5q8tAmEP73kWTzt5Fm8fBWEP4HpQLMSE5q8qyKlPzATmrwAAACA58WnP7DkWTzt5Fm858WnPyrlWbzt5Fm858WnP64rdLMSE5q8qyKlP/QSmjwAAACA58WnPyrlWbzt5Fk858WnP7DkWTzt5Fk858WnP64rdLMSE5o8/////2M7sd2Q1ooYkEfm/P//pMb///8/WypGC+Gy+fz//z+tkWBw+qHVyEUoz3L4mKc4vLI43yxdLHbe/DQgTP9/AAD/////R85HTv////+Ff4lAK0AfgMfFolXWMIuH/3//f/9/AIC+0v9//38AgICefuH/f/+//3//v0eAEaDHxVyqGI+Upwt/Dv//fwDAR863sf9//7//v///t3/t36HVNrrkcGvY/////5vEsd3//6TG////P///P60miznw/////3iAwv/zyHxA3e1j/4CegB7//////////2yDSP57wPRIIRKagP9/AAD/////MIAaQOQ+HoFZuf9/////P3vACrc1ge62/3//f/h/AoD/f/9/+H8CgP9//79Bgo+g88iCv8l+EMlHgLf//3//v/////+Tf8n//7///7h9bd//////rnxW/oCegB6AHr6w88iCv1W+jJvzyHxA5Ugqn///pMb/fwCAgJ5+4X7hvrB7wPRIqUGMm3vACrcZtyqfWbn/f/9/AIA=")
}, {
"aabb": AABB(-1.33384, -0.0273896, -0.0472911, 0.173239, 0.0547793, 0.0945823),
"attribute_data": PackedByteArray("AABAPwAAAD9UACA/AAAAPwAAID8AAAA/AAAAPwAAAD/W/l8/AAAAPwAAgD8AAAA/AABgPwAAAD8AAIA/AAAAPwAAYD8AAAA/AACAPwAAAD8AAEA/AAAAPwAAYD8AAAA/AAAgPwAAAD8AAEA/AAAAPwAAID8AAAA/8Ce/PgAAAD8AAAA/AAAAPwAAwD4AAAA/AACAPgAAAD9Y/78+AAAAPwAAwD4AAAA/AAAAPwAAAD8AAIA+AAAAPwAAwD4AAAA/AAAAPgAAAD8AAIA+AAAAPwAAAAAAAAA/AAAAPgAAAD8AAAA+AAAAPwAAAAAAAAA/AABAPwAAAD8AACA/AAAAPwhsID8AAAA/+JNfPwAAAD8AAIA/AAAAPwAAgD8AAAA/AAAAPwAAAD8AAAA/AAAAPwAAAD8AAAA/AAAgPwAAAD8AAAA/AAAAPwAAgD4AAAA/AACAPgAAAD8AAAA+AAAAPwAAAAAAAAA/HrABPgAAAD8AAAAAAAAAPwAAAD4AAAA/AABAPwAAAD8AACA/AAAAPwAAAD8AAAA/AABAPwAAAD+GACA/AAAAPwAAYD8AAAA/AAAAPwAAAD8AAEA/AAAAPwAAYD8AAAA/+u9+PwAAAD8AAIA/AAAAPwAAYD8AAAA/e/9fPwAAAD9N/38/AAAAPwAAQD8AAAA/3v1fPwAAAD/8/H8/AAAAP5v+fz8AAAA/AABAPwAAAD+t/18/AAAAPwAAQD8AAAA/KgEgPwAAAD+Y/38/AAAAPyICID8AAAA/AABAPwAAAD/W/l8/AAAAPwAAQD8AAAA/KgEgPwAAAD8AAAA/AAAAPwAAgD4AAAA/////PgAAAD9Y/78+AAAAP///fz4AAAA/TgEAPgAAAD9OAQA+AAAAP7QRzjYAAAA/pAQAPgAAAD8/srI3AAAAP/7/fz4AAAA///9/PgAAAD+MCAA+AAAAPxbqQDgAAAA/AACAPgAAAD+u/b8+AAAAP7r7vz4AAAA/9f6/PgAAAD8AAIA+AAAAPwAAwD4AAAA/FQIAPgAAAD9L2zM3AAAAPwAAAAAAAAA/AADAPgAAAD8AAIA+AAAAPwAAAD4AAAA/ZAOIOwAAAD8AAIA+AAAAPwAAwD4AAAA/"),
"format": 34359742487,
"index_count": 456,
"index_data": PackedByteArray("MAAfADEAMQAfADIAMAAzAB8AHgAwADEAMwA0AB8ANQAzADAAHwA0ADYAHwA2ADIAMwA3ADQAIQAwAB4AIQA1ADAANQA4ADMAOAA3ADMAOQA1ACEAOQAFADUABQA4ADUAIgA5ACEABQA6ADgAIgAhADsAOwAhAB4ABwAiADsABwA7AAYAOgA8ADgAOAA8ADcAOgA9ADwABgA7AD4AOwAeAD4ABgA+AAAAPQA/ADwAPQBAAD8AQAAEAD8AQABBAAQAPwAEAEIAQQBDAAQAPAA/AEQAPwBCAEQAPABEADcARABCAEUAQQBGAEMANwBEAEcARABFAEcANwBHADQARgAIAEMARgAjAAgAIwAJAAgAQwAIAAoACAALAAoAQwAKAEgASQBDAEgASQBIAEoASAAKAAwACgANAAwASgBIAAEASAAMAAEASgABAEsAAQAMAAMADAAOAAMAAQADAEwARQABAEwATAADABQAAwAVABQAFAAXAE0ATAAUABMARQBMAE4ATgBMABMARwBFAE4ATwAUABYATwAWAFAAUAAWABgAFgAZABgAUAAYAFEAGAAbACwAUgAYACwAUgAsAFMAVABSAFMAVABTAFUAVgBSAFQAVgBXAFIAWABUAFUAWABVAFkAWgBWAFQAWgBUAFgAWwBXAFYAWwATAFcATgATAFsAXABbAFYAXABWAFoAJABOAFsAJABbAFwARwBOACQANABHACQANAAkADYANgAkAFwANgBcAF0AXQBcAFoAMgA2AF0AXQBaAF4AXgBaAFgAMgBdAF8AXwBdAF4AJQAyAF8AMQAyACUAXgBYAGAAYABYAFkAYABZAGEAKgBeAGAAXwBeACoAKwBgAGEAKgBgACsAKwBhAGIAYwBfACoAJQBfAGMAZAAqACsAYwAqAGQAZQArAGIAZAArAGUAZQBiABoALQBlABoALQAaAGYAKQBkAGUAKQBlAC0ADwBjAGQADwBkACkAJgBjAA8AJgAlAGMALwAtAGYALwBmAC4AHAAvAC4AHAAuAB0AEgAvABwAZwAtAC8AEgBnAC8AZwApAC0AEQBnABIAaAApAGcAEQBoAGcAaAAPACkAEABoABEAKAAPAGgAEAAoAGgAKAAmAA8AAgAoABAAAgAnACgAJwAmACgAAAAnAAIAAAA+ACcAJwAgACYAPgAgACcAIAAlACYAPgAeACAAIAAxACUAHgAxACAA"),
"lods": [0.007916, PackedByteArray("HgAfACAAHgABAB8AAAAeACAABgAeAAAABgAhAB4AIQABAB4AIgAhAAYABwAiAAYAIgAFACEABQAEACEAIQAEAAEABQAjAAQAIwAIAAQAIwAJAAgABAAIAAoACAALAAoABAAKAAEACgAMAAEACgANAAwAAQAMAAMADAAOAAMAAQADACQAHwABACQAIAAfACQAAwAVABQAJAADABMAAwAUABMAFAAXABYAEwAUABYAIAAkACUAJQAkABMAIAAlACYAJQATAA8AJgAlAA8AEwAWABgAFgAZABgAJwAgACYAAAAgACcAAAAnAAIAJwAmACgAAgAnACgAKAAmAA8AAgAoABAAEAAoABEAKAAPABEAEQAPACkAEQApABIADwATACoADwAqACkAEwAYACoAKQAqACsAKgAYACsAKwAYACwAGAAbACwAKwAsABoAKQArAC0ALQArABoAEgApAC0ALQAaAC4AEgAtAC8ALwAtAC4AEgAvABwAHAAvAC4AHAAuAB0A"), 0.021988, PackedByteArray("AAABAAIAAgABAAMAAAAEAAEABQAEAAAABQAAAAYABwAFAAYABQAIAAQABQAJAAgABAAIAAoABAAKAAEACAALAAoACgAMAAEACgANAAwAAQAMAAMADAAOAAMAAgADAA8AAgAPABAAEAAPABEAEQAPABIAAwATAA8AAwAUABMAAwAVABQAEwAUABYAFAAXABYADwATABgAEwAWABgADwAYABIAFgAZABgAEgAYABoAGAAbABoAHAASABoAHAAaAB0A")],
"material": SubResource("StandardMaterial3D_v2cci"),
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 105,
"vertex_data": PackedByteArray("AJSWv/QSmrwAAACApMunv49U1Lv0zzc8ei+Wv7HkWbzt5Fk8JaOov8SniDM8yEg8g2imvx3wBrzkoGm8+zOWvzQtfTNg5D29ei+Wv7HkWbzt5Fm8R7+Vv64rdDMSE5q8UqWovylWo7s5Zg28HLuqv1wGiTMAAACA3amov0wH5bsAAACAHLuqv1wGiTMAAACAUqWovylWo7s5Zg08HLuqv1wGiTMAAACAHLuqv1wGiTMAAACAAOqVvyEZnzxUnwg9R7+Vv64rdDMSE5o8ei+WvyjlWTzt5Fk8AJSWvzATmjwAAACApMunv51V1Dvzzzc8UqWovzlXozs6Zg08HLuqv1wGiTMAAACA3amov1sI5TsAAACAHLuqv1wGiTMAAACAUqWovzlXozs5Zg28HLuqv1wGiTMAAACA+zOWvzQtfTNg5D29HLuqv1wGiTMAAACAei+WvyjlWTzt5Fm8R7+Vv64rdDMSE5q8LgKXvydg4LwAAACA7Y+gv4ZSWryk/7w8AOqVv+YYn7xVnwg9AOqVv+YYn7xVnwi9bI6Uv1+zejOQcT29JaOov8SniDM9yEi8gKGkv7KzhjPIH8o8+zOWvzQtfTNg5D09sv6Uv6i1ezNYtEE9jX2VvwXGnbyhzgQ9bI6Uv1+zejOQcT09LgKXv2Rg4DwAAACAsn+gv2TcmjwAAACA7Y+gvwhTWjyk/7y8JaOov8SniDM9yEi8AOqVvyEZnzxUnwi9bI6Uv1+zejOQcT29jX2Vv0HGnTyhzgS9LgyYv9kr27wAAACAKAqXv7wQm7zbPAY9vpegvxY2hDPlcAU9sn+gvyXcmrwAAACAApuivwnnQbzX26c8KAqXv7wQm7zbPAa9TqCivyeBhTNGIe08A5Civ1hribwAAACA7Y+gv4ZSWryk/7y8sv6Uv6i1ezNYtEG9vpegvxY2hDPlcAW9jX2VvwXGnbyhzgS9ApuivwnnQbzX26e8TqCivzqBhTNGIe28AJSWv0wg3bwAAACAsp6kv5ErJbxY/I68gKGkv7KzhjPIH8q8HGmmv3CvhzODSqW8SGemv1qcPrwAAACApMunv49U1Lv0zze835ikv+PLabwAAACAg2imvx3wBrzkoGk8hsqnv7lbiDN7PIK8sp6kv5ErJbxY/I48+82nv0iCFbwAAACAg2imvx3wBrzkoGm8SGemv1qcPrwAAACAg2imvx3wBrzkoGk8hsqnv69biDN7PII83amov1sI5TsAAACAHGmmv3CvhzODSqU8pMunv51V1Dvzzzc8+82nv8+CFTwSE5oppMunv51V1Dv0zze8pMunv51V1Dv0zze8hsqnv7lbiDN7PIK8g2imv6PwBjzkoGm8HGmmv3CvhzODSqW8SGemv96cPjwAAACA+82nv8+CFTwSE5opsp6kvxUsJTxY/I68gKGkv7KzhjPIH8q835ikv2XMaTwAAACAg2imv6PwBjzjoGk8sp6kvxUsJTxY/I48Apuiv4vnQTzX26c8A5Civ5lriTwSE5op7Y+gvwhTWjyk/7w8Apuiv43nQTzX26e8TqCivzqBhTNGIe28vpegvxY2hDPlcAW9KAqXv/kQmzzbPAY9LgyYvxYs2zwAAACAKAqXv/kQmzzbPAa9sv6Uv6i1ezNYtEG9AJSWv4kg3TwAAACAjX2Vv0HGnTyhzgQ9R85HTv////+gZnBC////P8fFolXWMIuHvE7/f////z+HQFwUViQBxwAARfH///8/odXIRSjPcvj//z+tkWBw+pk5SyD///8/AAD/f////79MXbMi////PwAA/3////+/s19mRv///z8AAP9/////vwAA/3////+/9oNzyf///z++0v9//38AgMfFXKoYj5SnR863sf9//7+gZo69PxE3qrNfmLn///8/AAD/f////79MXUvd/3//PwAA/3////+/mTmz3////z8AAP9/////vwAARfH///8/AAD/f////7+h1Ta65HBr2P//P60miznwfoB/AP///z9pc5Y7////P/aDizb///8/i7b2A////z///5+z////PwAAu87///8/zWL/f////z9Gcf9/////P5SO/3////8/MbghSf///z9fzP9/////P36Af/////8/CXIJ8v///z9pRGnz////PwAAu87///8/i7YI/P///z///5+z////PyDJzcf///8/r3RQC////z+NdpA6////P6hq/3////8/CXL1Df///z8PcVU8////P25Fcgn///8/fWb/f////z/ZbyYQ////P2lElQz///8///9q8f///z8AAKfq////PyDJMTj///8/qkPvDv///z8AAH3m////PwK7Ajv///8/RkJcEfwmueYAAMzi////PwAAcN7///8/C2rzFf////+OPV4Z////P0BtvhL/////omt4P6jb/LgAAK/X////P6NuuD0C2UWZrWRSG///AACHQFwUlCwx8Atq8xX//wAAomt4P0IT3WSvV/9/////P0xdS93///8/cV7/f////z+gZo69Pl73qK1krOT/f/8/jj2g5thOTDaOPaDmv+7G1QAAr9f///8/h0Ci686xXdQAAHDe////PwtqC+r/f/+/rWSs5P9//79GQqLu////PwAAzOL///8/QG1A7f///z+ia4bAME6hq6NuRsL///8/D3Gpw////z/Zb9jv////P2lzaMT///8/qkMP8f///z8AAH3m////PwAAp+r///8/jXZuxf///z+vdK70////P25FjPb///8///9q8f///z8Cu/zE////PzG43bb///8/")
}, {
"aabb": AABB(1.03122, -0.039194, -0.00153103, 0.259475, 0.089067, 0.0554204),
"attribute_data": PackedByteArray("AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAgPwAo0TsBACA/kPdWPQAAID8AKNE7AQAgP5D3Vj0AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD///38+sPdWPQAAgD4AKNE7AACAPgAo0Tv//38+sPdWPQ=="),
"format": 34359742487,
"index_count": 48,
"index_data": PackedByteArray("CgALAAwADQALAAoADQAKAAwADQAOAAsADQAMAA8ADwAOAA0AAAABAAIAAwABAAAAAwAEAAEABQAEAAMABgADAAAABgAAAAcABwAIAAYABwAJAAgAEAARABIAEAATABEA"),
"lods": [0.0556672, PackedByteArray("AAABAAIAAwABAAAAAwAEAAEABQAEAAMABgADAAAABgAAAAcABwAIAAYABwAJAAgA")],
"material": SubResource("StandardMaterial3D_neof0"),
"name": "Material.002",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 20,
"vertex_data": PackedByteArray("USCOP+KJIL3Qw1k9USCOP4TnF70Su1w9tAmEPx3lWbzt5Fk8pjWlP+iJIL3Qw1k9pjWlP4rnF70Su1w9LByhPyjlWbzt5Fk8LByhPyjlWbzt5Fk8tAmEPx3lWbzt5Fk8pjWlP4rnF70Su1w9USCOP4TnF70Su1w9nAWOP6dHTD3wva46nAWOP+DOSz3QrMi6KP+DP/oSmjwAAACAaDKlP6FHTD3wva46aDKlP9rOSz3QrMi65BqhP/USmjwAAACAKP+DP/oSmjwAAACAaDKlP9rOSz3QrMi65BqhP/USmjwAAACAnAWOP+DOSz3QrMi67LGW7f///z8q5jgR////PzCAGkD///8/ETlyxJ1FX124GoM6////P4V/iUD///8/hX+JQE4AhD8wgBpAYgAvQLgagzr///8/KuY4Ef///z9pw+kL////P5+Lv0X///8/R4C3/////z+YGcI7////P/9CFGn///8/C38O/////z9HgLf/////P/9CFGn///8/C38O/////z+fi79F////Pw==")
}, {
"aabb": AABB(1.03155, -0.0398037, -0.0549547, 0.259154, 0.0265045, 0.0416555),
"attribute_data": PackedByteArray("AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAYD8AKNE7AABgP5D3Vj0AAGA/ACjROwAAYD+Q91Y9"),
"format": 34359742487,
"index_count": 30,
"index_data": PackedByteArray("AAABAAIAAAADAAEAAgABAAQAAgAEAAUABQAEAAYABQAGAAcACAACAAUACAAFAAkACQAKAAgACQALAAoA"),
"material": SubResource("StandardMaterial3D_hjuwa"),
"name": "Material.003",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 12,
"vertex_data": PackedByteArray("LByhPyjlWbzt5Fm8pjWlP/VBF70lGGG9pjWlPzYJI70nPly9LByhPyjlWbzt5Fm8USCOP+5BF70lGGG9USCOPzAJI70nPly9tAmEPx3lWbzt5Fm8tAmEPx3lWbzt5Fm8LByhPyjlWbzt5Fm8tAmEPx3lWbzt5Fm8pjWlP/VBF70lGGG9USCOP+5BF70lGGG9kNaKGP///z+A5h/G////P/vFljwrPIFimKc4vP///z8HGPrt////P9NPshL///8/XSx23v///z9bKkYL////P5inOLyyON8sXSx23vw0IEyA5h/G////PwcY+u3///8/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_xvmid")

[sub_resource type="BoxShape3D" id="BoxShape3D_apqjk"]
size = Vector3(1.58209, 0.131592, 1.03613)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_naec7"]
random_pitch = 1.1
streams_count = 3
stream_0/stream = ExtResource("2_psjdr")
stream_1/stream = ExtResource("3_avg0l")
stream_2/stream = ExtResource("4_5k3op")

[sub_resource type="BoxShape3D" id="BoxShape3D_s2c20"]
size = Vector3(0.01, 0.01, 0.01)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kb7lm"]
shader = ExtResource("5_6co2i")

[sub_resource type="Gradient" id="Gradient_2pgly"]
colors = PackedColorArray(1, 1, 1, 0.392157, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_5chhl"]
gradient = SubResource("Gradient_2pgly")

[sub_resource type="Curve" id="Curve_betd2"]
bake_resolution = 16
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_oi1nk"]
curve = SubResource("Curve_betd2")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e7y6b"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("6_urlbc")
shader_parameter/tex = ExtResource("7_7p356")
shader_parameter/uv_offset = Vector2(0, 0)
shader_parameter/color_ramp = SubResource("GradientTexture1D_5chhl")
shader_parameter/curve = SubResource("CurveTexture_oi1nk")
shader_parameter/emmission_transform = Projection(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)
shader_parameter/flags = 44

[sub_resource type="QuadMesh" id="QuadMesh_tgg2m"]
material = SubResource("ShaderMaterial_e7y6b")

[node name="ArrowShotgun" type="CharacterBody3D" node_paths=PackedStringArray("arrow_hit_audio") groups=["weapon"]]
collision_layer = 8
collision_mask = 8
script = ExtResource("1_ei326")
arrow_hit_audio = NodePath("ArrowHitAudioStreamPlayer3D")

[node name="ArrowMesh" type="Node3D" parent="."]
transform = Transform3D(-2.62268e-08, 0, -3, 0, 1.4, 0, 0.6, 0, -1.31134e-07, -0.0352437, 0, 0.0184599)
visible = false

[node name="Arrow" type="MeshInstance3D" parent="ArrowMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.172839, 0, -0.0122316)
mesh = SubResource("ArrayMesh_rhtcn")
skeleton = NodePath("")

[node name="Area3D" type="Area3D" parent="." groups=["weapon"]]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0606384, -0.0118408, -0.00012207)
shape = SubResource("BoxShape3D_apqjk")

[node name="ArrowHitAudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_naec7")
volume_db = -20.0
bus = &"SFX"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_s2c20")

[node name="GPUTrail3D" type="GPUParticles3D" parent="."]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 1)
visible = false
amount = 15
lifetime = 15.0
explosiveness = 1.0
fixed_fps = 60
process_material = SubResource("ShaderMaterial_kb7lm")
draw_pass_1 = SubResource("QuadMesh_tgg2m")
script = ExtResource("8_shs3p")
length = 15
length_seconds = 0.25
color_ramp = SubResource("GradientTexture1D_5chhl")
curve = SubResource("CurveTexture_oi1nk")
billboard = true
_defaults_have_been_set = true
metadata/_custom_type_script = "uid://dctlv3toi4hgk"

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
